# BabylonNative

Dependencies/napi/: CMakeLists.txt
Dependencies/napi/include/napi/: js_native_api.h  napi-inl.h
Dependencies/napi/napi-direct/include/napi/: env.h  js_native_api.h  napi-inl.h  napi.h
Dependencies/napi/napi-direct/source/: env.cc  js_native_api_chakra.cc  js_native_api_javascriptcore.cc  js_native_api_v8.cc
Dependencies/napi/source/: js_native_api_v8.cc
